[tool.poetry]
name = "excel-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "excel_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
numpy = "^1.24.3"
plotly = "^5.14.1"
openpyxl = "^3.1.2"
dash = "^2.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
